--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,9 +10,11 @@
     <script src="vendors/jquery-3.6.0.min.js"></script>
     <script src="scripts/client.js"></script>
 
-    <title>Document</title>
+    <title>Express Server</title>
 </head>
 <body>
-
+    <div class="headerContainer">
+        <h1>The express server is loading this HTML!!!</h1>
+    </div>
 </body>
 </html>
