Added quotes to homepage

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,5 +16,8 @@
     <div class="headerContainer">
         <h1>The express server is loading this HTML!!!</h1>
     </div>
+    <div id="quoteContainer">
+        <!-- Quotes will go in here -->
+    </div>
 </body>
 </html>
