--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,6 +13,13 @@
     <title>Express Server</title>
 </head>
 <body>
+    <div id="inputContainer">
+        <form id="inputForm">
+            <input id="test" type="text" placeholder="Text">
+            <input id="author" type="text" placeholder="Author">
+            <input type="submit">
+        </form>
+    </div>
     <div class="headerContainer">
         <h1>The express server is loading this HTML!!!</h1>
     </div>
