Added post method for setting quotes
server is not yet handling our post request

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="inputContainer">
         <form id="inputForm">
-            <input id="test" type="text" placeholder="Text">
+            <input id="text" type="text" placeholder="Text">
             <input id="author" type="text" placeholder="Author">
             <input type="submit">
         </form>
